--- a/app/globals.css
+++ b/app/globals.css
@@ -31,11 +31,15 @@ body {
     'Noto Sans SC', /* 중국어 간체 */
     'Noto Sans TC', /* 중국어 번체 */
     'Noto Sans',    /* 영어, 베트남어, 인도네시아어 */
-    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Noto Sans Fallback', /* 안드로이드 폰트 fallback */
+    'Roboto', 'Roboto Condensed', /* 안드로이드 기본 폰트 */
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: 'kern' 1;
 }
 
 /* 스크롤바 숨김 */
