Fix Android header font consistency - force Noto Sans fonts for all header elements and language dropdown

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,26 @@ body {
   }
 }
 
+/* 헤더 폰트 일관성 보장 */
+header, header * {
+  font-family: 'Noto Sans KR', 'Noto Sans JP', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans', 'Roboto', 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+  font-display: block !important;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale !important;
+}
+
+/* 안드로이드 헤더 폰트 강제 적용 */
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  header, header h1, header button, header div, header span, header a {
+    font-family: 'Noto Sans KR', 'Noto Sans JP', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans', 'Roboto', 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+    font-display: block !important;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: grayscale !important;
+  }
+}
+
 /* 스크롤바 숨김 */
 .hide-scrollbar {
   -ms-overflow-style: none;
