--- a/app/globals.css
+++ b/app/globals.css
@@ -79,6 +79,28 @@ header, header * {
   }
 }
 
+/* 안드로이드 전용 폰트 강제 적용 - 모든 요소 */
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  * {
+    font-family: 'Noto Sans KR', 'Noto Sans JP', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans', 'Roboto', 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+    font-display: block !important;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: grayscale !important;
+  }
+}
+
+/* 안드로이드 갤럭시 브라우저 전용 */
+@supports (-webkit-touch-callout: none) and (display: -webkit-box) {
+  * {
+    font-family: 'Noto Sans KR', 'Noto Sans JP', 'Noto Sans SC', 'Noto Sans TC', 'Noto Sans', 'Roboto', 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+    font-display: block !important;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: grayscale !important;
+  }
+}
+
 /* 스크롤바 숨김 */
 .hide-scrollbar {
   -ms-overflow-style: none;
